Fixed some alignment issues

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -798,12 +798,26 @@ select {
   margin-bottom: 1.5rem;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .-ml-2 {
   margin-left: -0.5rem;
 }
 
 .mb-1 {
   margin-bottom: 0.25rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .ml-6 {
@@ -1438,10 +1452,6 @@ article.documentation p > code {
 }
 
 @media (min-width: 1024px) {
-  .lg\:block {
-    display: block;
-  }
-
   .lg\:gap-10 {
     gap: 2.5rem;
   }
